@@ -1,3 +1,7 @@
+2008-09-04	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Add git svn revision versioning support.
+
 2008-08-25	Brian J. Tarricone <kelnos@xfce.org>
 
 	* settings/session/{Makefile.am,xfce-session-settings.desktop.in},
